samples/_failures_safe/1761628497_08fe1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_344e8f3f.c: In function ‘main’:
./samples/SAFE/__tmp_344e8f3f.c:163:13: error: expected ‘;’ at end of input
  163 |         free
      |             ^
      |             ;
./samples/SAFE/__tmp_344e8f3f.c:163:9: error: expected declaration or statement at end of input
  163 |         free
      |         ^~~~
./samples/SAFE/__tmp_344e8f3f.c:163:9: error: expected declaration or statement at end of input
